--- a/link.html
+++ b/link.html
@@ -5,6 +5,6 @@
     <title>リンク</title>
   </head>
   <body>
-    I love <a href="https://www.nike.com/>NIKE</a>!
+    I love <a href="https://www.nike.com/jp/>NIKE</a>!
   </body>
 </html>
